--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,3 +2,10 @@ flask
 flask-jwt-extended
 flask-cors
 python-dotenv
+
+requests
+
+pytest>=7.0.0
+pytest-flask>=1.2.0
+pytest-mock>=3.8.0
+requests-mock>=1.9.0
