--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,6 @@
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
@@ -26,7 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
+    "test:puppeteer": "jest --config=jest.config.js --runInBand",
     "eject": "react-scripts eject",
     "dev": "react-scripts start"
   },
@@ -50,6 +47,14 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^10.0.0"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
+    "@types/puppeteer": "^5.4.7",
+    "@types/uuid": "^10.0.0",
+    "jest": "^29.7.0",
+    "puppeteer": "^24.10.0",
+    "ts-jest": "^29.3.4"
   }
 }
