fixes towards credit processing

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,4 @@ requests-mock>=1.9.0
 
 SQLAlchemy>=1.4
 psycopg2-binary # If using PostgreSQL, otherwise use the appropriate DB driver e.g. mysqlclient for MySQL
+tiktoken # Added for token counting
