--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "@types/react-icons": "^2.2.7",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
