--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,9 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@drdata/docomo": "file:../../docomo/lib",
     "@faker-js/faker": "^8.0.2",
     "@testing-library/dom": "^10.4.0",
     "@types/react-icons": "^2.2.7",
@@ -14,33 +16,25 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.23.0",
-    "react-scripts": "5.0.1",
     "remark-gfm": "^4.0.1",
     "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "BROWSER=none react-scripts start",
-    "typecheck": "tsc --noEmit && echo 'TypeScript type check passed!'",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "start": "vite",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "prettier:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "format": "npm run prettier && npm run lint:fix",
     "format:check": "npm run prettier:check && npm run lint",
-    "build": "react-scripts build",
     "test": "jest",
-    "test:puppeteer": "jest --config=jest-puppeteer.config.js --runInBand",
-    "eject": "react-scripts eject",
-    "dev": "react-scripts start"
+    "test:puppeteer": "jest --config=jest-puppeteer.config.js --runInBand"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -54,18 +48,29 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^24.0.3",
     "@types/puppeteer": "^5.4.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
+    "@vitejs/plugin-react": "^4.5.2",
+    "eslint": "^9.29.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^15.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "puppeteer": "^24.10.0",
-    "ts-jest": "^29.3.4",
-    "typescript": "4.9.5"
+    "ts-jest": "^29.2.5",
+    "typescript": "~5.8.3",
+    "vite": "^7.0.0"
   }
 }
