--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,8 @@
     "format": "npm run prettier && npm run lint:fix",
     "format:check": "npm run prettier:check && npm run lint",
     "test": "jest",
-    "test:puppeteer": "jest --config=jest-puppeteer.config.js --runInBand"
+    "test:playwright": "playwright test",
+    "test:playwright:ui": "playwright test --ui"
   },
   "browserslist": {
     "production": [
@@ -49,12 +50,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
+    "@playwright/test": "^1.53.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^24.0.3",
-    "@types/puppeteer": "^5.4.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/uuid": "^10.0.0",
@@ -68,7 +69,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "puppeteer": "^24.10.0",
     "ts-jest": "^29.2.5",
     "typescript": "~5.8.3",
     "vite": "^7.0.0"
