--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "typecheck": "cd frontend && tsc --noEmit"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "@types/node": "^24.0.10",
+    "concurrently": "^8.2.2",
+    "rollup-plugin-visualizer": "^6.0.3"
   },
   "dependencies": {
     "react-icons": "^5.5.0"
