--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "dependencies": {
     "@drdata/ai-styles": "file:../style-library/ai-styles",
-    "@faker-js/faker": "^8.0.2",
     "@testing-library/dom": "^10.4.0",
     "@types/react-icons": "^2.2.7",
     "@types/react-router-dom": "^5.3.3",
@@ -17,6 +16,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.23.0",
     "remark-gfm": "^4.0.1",
+    "unique-names-generator": "^4.7.1",
     "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
