--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,16 @@
   "dependencies": {
     "@drdata/ai-styles": "file:../style-library/ai-styles",
     "@testing-library/dom": "^10.4.0",
+    "@types/leaflet": "^1.9.20",
     "@types/react-icons": "^2.2.7",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.23.0",
     "remark-gfm": "^4.0.1",
