--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "json5": "^2.2.3",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
