--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:backend": "cd backend && python app.py",
     "dev": "cd frontend && concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "release": "cd frontend && npm run build && cd backend && python app.py",
-    "typecheck": "cd frontend && tsc --noEmit"
+    "typecheck": "cd frontend && tsc --noEmit",
+    "create-docker-image": "cd backend && docker build -t storywriter ."
   },
   "devDependencies": {
     "@playwright/test": "^1.53.2",
