--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,25 +5,25 @@
   "type": "module",
   "dependencies": {
     "@drdata/ai-styles": "file:../style-library/ai-styles",
-    "@testing-library/dom": "^10.4.0",
+    "@testing-library/dom": "^10.4.1",
     "@types/leaflet": "^1.9.20",
-    "@types/react-icons": "^2.2.7",
+    "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
-    "axios": "^1.9.0",
-    "dotenv": "^16.5.0",
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.2",
     "json5": "^2.2.3",
     "jsonrepair": "^3.13.0",
     "leaflet": "^1.9.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^6.23.0",
+    "react-router-dom": "^7.8.2",
     "remark-gfm": "^4.0.1",
     "unique-names-generator": "^4.7.1",
-    "uuid": "^11.1.0",
-    "web-vitals": "^2.1.4"
+    "uuid": "^13.0.0",
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "vite",
@@ -54,28 +54,28 @@
     ]
   },
   "devDependencies": {
-    "@eslint/js": "^9.0.0",
-    "@playwright/test": "^1.53.2",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^24.3.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@eslint/js": "^9.35.0",
+    "@playwright/test": "^1.55.0",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.34.1",
-    "@typescript-eslint/parser": "^8.34.1",
-    "@vitejs/plugin-react": "^4.5.2",
-    "eslint": "^9.29.0",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
+    "@vitejs/plugin-react": "^5.0.2",
+    "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^15.0.0",
+    "globals": "^16.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "typescript": "~5.8.3",
-    "vite": "^7.0.0"
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
+    "rollup-plugin-visualizer": "^6.0.3",
+    "typescript": "~5.9.2",
+    "vite": "^7.1.5"
   }
 }
