--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -78,3 +78,6 @@ Werkzeug==3.1.3
 xxhash==3.5.0
 yarl==1.20.1
 zstandard==0.24.0
+google-auth==2.34.0
+google-auth-oauthlib==1.2.1
+google-auth-httplib2==0.2.0
